fix hidden texts by removing visiblity prop in footer__progress-active-content

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5460,9 +5460,6 @@ select[disabled] {
   width: 100% !important;
   vertical-align: middle !important;
 }
-.footer__progress-active-content {
-  visibility: hidden;
-}
 .footer__item-list {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
