--- a/src/css/layouts/footer.css
+++ b/src/css/layouts/footer.css
@@ -464,9 +464,6 @@
   width: 100% !important;
   vertical-align: middle !important;
 }
-.footer__progress-active-content {
-  visibility: hidden;
-}
 .footer__item-list {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
